--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,26 @@ h1.headline {
     color: #253276
 }
 
+h4 {
+    color: #253276;
+    font-weight: bolder;
+}
+
 #map { 
-    /* position: absolute;  */
-    /* top: 0; 
-    bottom: 0;  */
-    
     width: auto;
-    height: 500px; 
+    height: 44em; 
+}
+
+/* .marker {
+    background-image: url('../images/pin.svg');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+} */
+
+/* remove mapbox logo at the bottom left */
+.mapboxgl-ctrl-logo{
+    display: none !important;
 }
